tests/urmoac/errors/net_issues/edge_length_0_patch/d2r_output.urmoac
2000;10000;0.10;10.00;-200.00;0.00;-200.00;-10.00
2001;10000;0.10;10.00;-100.00;0.00;-100.00;10.00
2002;10000;0.10;0.00;0.00;0.00;0.00;0.00
2003;10000;0.10;10.00;100.00;0.00;100.00;-10.00
2004;10000;0.10;10.00;200.00;0.00;200.00;10.00
